# Quantification

./: main.py  pyproject.toml
doc/: day2_risk_metrics.md  day3_backtest_engine.md  implementation_plan.md
src/: 600519_qfq.parquet  AAPL.parquet  AAPL.xlsx  day1.py  day2_risk_metrics.py  day3_backtest_engine.py
